<resources>
    <string name="app_name">NUMAD20F-NicholasGalinski</string>
    <string name="action_settings">Settings</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="third_fragment_label">Click Message Fragment</string>
    <string name="link_collector_label">Link Collector</string>
    <string name="next">About</string>
    <string name="previous">Previous</string>
    <string name="buttons">Message Buttons</string>

    <string name="hello_first_fragment">Hello World!</string>
    <string name="hello_second_fragment">Nicholas Galinski - galinski.n@northeastern.edu</string>

    <string name="locator_fragment_label">Locator Fragment</string>
    <string name="lat">Latitude:</string>
    <string name="lng">Longitude</string>
    <string name="locator_string">Locator</string>
    <string name="accept">Accept</string>
    <string name="denied">Denied permission.</string>
    <string name="btn_again">Try Again</string>

    <!--  button labels  -->
    <string name="a">A</string>
    <string name="b">B</string>
    <string name="c">C</string>
    <string name="d">D</string>
    <string name="e">E</string>
    <string name="f">F</string>
    <string name="pressed">Pressed:</string>
    
    <!-- link strings -->
    <string name="link">Link</string>
    <string name="description">Description</string>
    <string name="add_link">Add a link</string>
    <string name="link_name">Name</string>
    <string name="link_content">Hyperlink here</string>
    <string name="link_add_btn">Add</string>
    <string name="cancel_btn">Cancel</string>
    <string name="invalid_link">Enter link again</string>
    <string name="about_text">Nicholas Galinski - galinski.n@northeastern.edu</string>

    <!-- at your service -->
    <string name="at_yr_srvc_str">At Your Service</string>
    <string name="web_srvc">Online Web Service</string>
    <string name="get_quote">Get the quote</string>
    <string name="get_author">Get the author</string>
    <string name="quote_url">URL: https://zenquotes.io/api/random</string>
    <string name="quote_url3">URL: https://api.whatdoestrumpthink.com/api/v1/quotes/random</string>
    <string name="quote_url2">Kanye URL: https://api.kanye.rest/?format=text</string>
    <string name="random_quote">Random Quotes</string>
    <string name="visit_web">Click to visit the website</string>
</resources>