<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="edu.neu.madcourse.numad20f_nicholasgalinski.service.AtYourServiceFragment"
    android:orientation="vertical">

    <Space
        android:layout_width="1dp"
        android:layout_height="10dp"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/quote_srvc"
        android:text="@string/random_quote"
        android:gravity="center"
        android:textSize="40dp"
        android:textStyle="bold"
        android:textColor="@color/colorPrimary"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/URL_editText"
        android:text="@string/quote_url"
        android:textSize="20dp"/>

    <Button
        android:id="@+id/visit_website"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:onClick="callWebserviceButtonHandler"
        android:text="@string/visit_web" />

    <Button
        android:id="@+id/get_quote"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/get_quote" />

    <TextView
        android:id="@+id/result_quote"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:autoSizeTextType="uniform"
        android:background="@color/colorGray"
        android:fontFamily="casual"
        android:singleLine="false"
        android:text=""
        app:autoSizeTextType="uniform"/>

    <Button
        android:id="@+id/get_author"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/get_author" />

    <TextView
        android:id="@+id/quote_author"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:autoSizeTextType="uniform"
        android:background="@color/colorGray"
        android:fontFamily="casual"
        android:singleLine="false"
        android:text=""
        app:autoSizeTextType="uniform"/>

</LinearLayout>