<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/nav_graph"
    app:startDestination="@id/FirstFragment">

    <fragment
        android:id="@+id/FirstFragment"
        android:name="edu.neu.madcourse.numad20f_nicholasgalinski.MainActivity"
        android:label="@string/first_fragment_label"
        tools:layout="@layout/activity_main">

        <action
            android:id="@+id/action_FirstFragment_to_SecondFragment"
            app:destination="@id/ClickMessageFragment" />
        <action
            android:id="@+id/action_FirstFragment_to_MessageFragment"
            app:destination="@id/LocatorFragment"
            />
        <action
            android:id="@+id/action_FirstFragment_to_LinkFragment"
            app:destination="@+id/LinkCollectorFragment"
            />
    </fragment>
    <fragment
        android:id="@+id/ClickMessageFragment"
        android:name="edu.neu.madcourse.numad20f_nicholasgalinski.ClickMessageFragment"
        android:label="@string/second_fragment_label"
        tools:layout="@layout/activity_click">

        <action
            android:id="@+id/action_SecondFragment_to_FirstFragment"
            app:destination="@id/FirstFragment" />
    </fragment>
    <fragment
        android:id="@+id/LinkCollectorFragment"
        android:name="edu.neu.madcourse.numad20f_nicholasgalinski.link_collector.LinkCollectorFragment"
        android:label="@string/link_collector_label"
        tools:layout="@layout/fragment_link">
        <action
            android:id="@+id/action_LinkFragment_to_FirstFragment"
            app:destination="@+id/FirstFragment" />
    </fragment>
    <fragment
        android:id="@+id/LocatorFragment"
        android:name="edu.neu.madcourse.numad20f_nicholasgalinski.locator.LocatorFragment"
        android:label="@string/locator_fragment_label"
        tools:layout="@layout/fragment_locator">
        <action
            android:id="@+id/action_MessageFragment_to_FirstFragment"
            app:destination="@+id/FirstFragment" />
    </fragment>
</navigation>